# RouteOptimizationAPI

./: .gitignore  CMakeLists.txt  README.md  build_and_deploy.ps1
include/: dist_calculator.h
jni/: jni_bridge.cpp  jni_bridge.h
jni/utils/: JTypeConverter.cpp  JTypeConverter.h
src/: dist_calculator.cpp  main.cpp
